# ADA502-FireGuard

./: Dockerfile  README.md  docker-compose.yml  frcm-0.1.0-py3-none-any.whl  pyproject.toml  requirements.txt
.github/workflows/: deploy-nrec.yml
src/: main.py
src/ada502_fireguard/: main.py
src/ada502_fireguard/templates/: index.html  mainpage.html
src/templates/: index.html  mainpage.html
