[project]
name = "ada502_fireguard"
version = "0.1.0"
description = "FireGuard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "folium>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ada502_fireguard"]
